--- a/GSKC.Web/Views/Shared/_Layout.cshtml
+++ b/GSKC.Web/Views/Shared/_Layout.cshtml
@@ -2,31 +2,71 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <header>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p class="site-title">
-                    <a href="~/">ASP.NET Web API</a></p>
+    <div style="background: black; color: white;text-align:center; height:107px">Header</div>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="margin-top: 107px">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
             </div>
-            <div class="float-right">
-                <nav>
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                        <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                    </ul>
-                </nav>
-            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav nav-justified">
+                    <li class="active"><a href="#">HOME</a></li>
+                    <li><a href="#about">SHOP</a></li>
+                    <li><a href="#contact">SUPPORT</a></li>
+                    <li><a href="#contact">CONTACT US</a></li>
+                    <li><a href="#contact">LOGIN</a></li>
+                    <li><a href="#contact">View cart</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
         </div>
-    </header>
+    </div>
+    <div class="row" style="margin-top: 49px">
+        @*<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 sidebar-offcanvas" id="sidebar" style="background: red; text-align:center; height: 200px;">
+                Search Section
+            </div>*@
+        <div id="SlidePanel" class="col-lg-3 col-md-3 hidden-sm hidden-xs" style="background: red; text-align:center; height: 200px;">
+            <a href="#" class="btn btn-danger" id="opener"><i class="glyphicon glyphicon-align-justify"></i></a>
+            Search Section
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background: green; text-align:center; height: 200px;">Main Content</div>
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="background: blue; text-align:center; height: 200px;">Social Section</div>
+    </div>
     @RenderBody()
 
+    <div class="footer">
+        <div class="container">
+            <p class="text-muted">Place sticky footer content here.</p>
+        </div>
+    </div>
+
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+
     @RenderSection("scripts", required: false)
+
+    <script>
+        $('#opener').on('click', function () {
+            var panel = $('#slide-panel');
+            if (panel.hasClass("visible")) {
+                panel.removeClass('visible').animate({ 'margin-left': '-300px' });
+            } else {
+                panel.addClass('visible').animate({ 'margin-left': '0px' });
+            }
+            return false;
+        });
+    </script>
+
 </body>
 </html>
