--- a/GSKC.Web/Views/Shared/_Layout.cshtml
+++ b/GSKC.Web/Views/Shared/_Layout.cshtml
@@ -9,64 +9,82 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div style="background: black; color: white;text-align:center; height:107px">Header</div>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="margin-top: 107px">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+    <div style="width: 1200px; margin: 0 auto">
+        <div style="background: black; color: white;text-align:center; height:107px">Header</div>
+        <div class="navbar navbar-inverse" role="navigation" style="margin-bottom: 0px">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav nav-justified">
+                        <li class="active"><a href="#">HOME</a></li>
+                        <li><a href="#about">SHOP</a></li>
+                        <li><a href="#contact">SUPPORT</a></li>
+                        <li><a href="#contact">CONTACT US</a></li>
+                        <li><a href="#contact">LOGIN</a></li>
+                        <li><a href="#contact">View cart</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
             </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav nav-justified">
-                    <li class="active"><a href="#">HOME</a></li>
-                    <li><a href="#about">SHOP</a></li>
-                    <li><a href="#contact">SUPPORT</a></li>
-                    <li><a href="#contact">CONTACT US</a></li>
-                    <li><a href="#contact">LOGIN</a></li>
-                    <li><a href="#contact">View cart</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
         </div>
-    </div>
-    <div class="row" style="margin-top: 49px">
-        @*<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 sidebar-offcanvas" id="sidebar" style="background: red; text-align:center; height: 200px;">
-                Search Section
+
+        <div class="row row-offcanvas row-offcanvas-left">
+            <div id="SlidePanel" class="col-lg-3 col-md-3 col-sm-3 sidebar-offcanvas" style="background: red; text-align:center; min-height:100%; padding-left: 0; padding-right: 0">
+                @*Search Section*@
+                <div class="panel panel-default">
+                    <!-- Default panel contents -->
+                    <div class="panel-heading">Panel heading</div>
+                    <div class="panel-body">
+                        <p>Information about panel stuff</p>
+                    </div>
+
+                    <!-- List group -->
+                    <ul class="list-group">
+                        <li class="list-group-item">Cras justo odio</li>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-9 col-xs-12" style="background: green; text-align:center; height: 400px;">
+                Main Content
+                <button type="button" class="btn btn-md glyphicon glyphicon-circle-arrow-right pull-left visible-xs" data-toggle="offcanvas"></button>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="background: blue; text-align:center; height: 400px;">Social Section</div>
+        </div>
+        @RenderBody()
+
+        @*<div class="footer">
+                <div class="container">
+                    <p class="text-muted">Place sticky footer content here.</p>
+                </div>
             </div>*@
-        <div id="SlidePanel" class="col-lg-3 col-md-3 hidden-sm hidden-xs" style="background: red; text-align:center; height: 200px;">
-            <a href="#" class="btn btn-danger" id="opener"><i class="glyphicon glyphicon-align-justify"></i></a>
-            Search Section
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="background: green; text-align:center; height: 200px;">Main Content</div>
-        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="background: blue; text-align:center; height: 200px;">Social Section</div>
+
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+
+
+        @RenderSection("scripts", required: false)
+
+        <script>
+            $('#opener').on('click', function () {
+                var panel = $('#slide-panel');
+                if (panel.hasClass("visible")) {
+                    panel.removeClass('visible').animate({ 'margin-left': '-300px' });
+                } else {
+                    panel.addClass('visible').animate({ 'margin-left': '0px' });
+                }
+                return false;
+            });
+        </script>
     </div>
-    @RenderBody()
-
-    <div class="footer">
-        <div class="container">
-            <p class="text-muted">Place sticky footer content here.</p>
-        </div>
-    </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-
-    @RenderSection("scripts", required: false)
-
-    <script>
-        $('#opener').on('click', function () {
-            var panel = $('#slide-panel');
-            if (panel.hasClass("visible")) {
-                panel.removeClass('visible').animate({ 'margin-left': '-300px' });
-            } else {
-                panel.addClass('visible').animate({ 'margin-left': '0px' });
-            }
-            return false;
-        });
-    </script>
-
 </body>
 </html>
