--- a/GSKC.Web/Views/Home/Index.cshtml
+++ b/GSKC.Web/Views/Home/Index.cshtml
@@ -1,19 +1,19 @@
 ﻿<div style="width:100%">
-    <div style="position: relative">
+    <div style="position: relative; overflow: hidden">
         <div id="ImageContainer" style="width:100%; height: 260px; overflow:hidden; padding: 0">
-            <div class="image" style="overflow:hidden;"><img src="/Images/slide-show-image-10.jpg" style="width: 100%"/></div>            
-            <div class="image" style="overflow:hidden;"><img src="/Images/slide-show-image-8.jpg" style="width: 100%" /></div>
-            <div class="image" style="overflow:hidden;"><img src="/Images/slide-show-image-7.jpg" style="width: 100%" /></div>
-            <div class="image" style="overflow:hidden;"><img src="/Images/slide-show-image-6.jpg" style="width: 100%" /></div>
-            <div class="image" style="overflow:hidden;"><img src="/Images/slide-show-image-5.jpg" style="width: 100%" /></div>
-            <div class="image" style="overflow:hidden;"><img src="/Images/slide-show-image-4.jpg" style="width: 100%" /></div>
-            <div class="image" style="overflow:hidden;"><img src="/Images/slide-show-image-3.jpg" style="width: 100%" /></div>
-            <div class="image" style="overflow:hidden;"><img src="/Images/slide-show-image-2.jpg" style="width: 100%" /></div>
+            <div class="image"><img src="/Images/slide-show-image-10.jpg" style="width: 100%"/></div>            
+            <div class="image"><img src="/Images/slide-show-image-8.jpg" style="width: 100%" /></div>
+            <div class="image"><img src="/Images/slide-show-image-7.jpg" style="width: 100%" /></div>
+            <div class="image"><img src="/Images/slide-show-image-6.jpg" style="width: 100%" /></div>
+            <div class="image"><img src="/Images/slide-show-image-5.jpg" style="width: 100%" /></div>
+            <div class="image"><img src="/Images/slide-show-image-4.jpg" style="width: 100%" /></div>
+            <div class="image"><img src="/Images/slide-show-image-3.jpg" style="width: 100%" /></div>
+            <div class="image"><img src="/Images/slide-show-image-2.jpg" style="width: 100%" /></div>
             <div style="clear:both"></div>
         </div>
 
         @*<div style="background-color: #000; opacity: .5;filter: alpha(opacity=50);width: 100%;height: 74px;position: absolute; bottom: 0"></div>*@
-        <div style="width: 100%;  text-align:center">
+        <div style="width: 100%;  text-align:center" class="hidden-xs">
             <div class="category-image-1 thumb" style="margin-left: 0;" data-product="109-Knives - Fixed Blades"><div>Fixed Blades</div></div>
             <div class="category-image-2 thumb" data-product="28-Knives - Folders"><div>Folders</div></div>
             <div class="category-image-3 thumb" data-product="73-Knives - Multi-Blade"><div>Multi-blade</div></div>
