--- a/GSKC.Web/Views/Shared/_Layout.cshtml
+++ b/GSKC.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/knockout")
+    <script src="/Scripts/require.js"></script>
+    <script src="/Scripts/config.js"></script>
 </head>
 <body>
     <div>
@@ -104,6 +106,7 @@
         });
 
     </script>
+    
 </body>
 
 </html>
