--- a/GSKC.Web/Areas/ProductSearch/Views/Shared/Index.cshtml
+++ b/GSKC.Web/Areas/ProductSearch/Views/Shared/Index.cshtml
@@ -1,83 +1,135 @@
 ﻿@*Search Section*@
 
-<div class="panel panel-default">
-    <!-- Default panel contents -->
-    <div class="panel-heading">Product Search</div>
-    @*<div class="panel-body">
-        <p>Information about panel stuff</p>
-    </div>*@
+<div id="ProductSearch" style="background-color: #ececec; border-right: 1px solid gray;border-bottom: 1px solid gray; padding-bottom:100px;">
+    <div>
+        <!-- Default panel contents -->
+        <div style="background-color: #c4c2c2; padding: 10px 0;">
+            <div class="button-arrow" style="float:left;margin-left: 5px"></div>
+            <div style="font-weight: bold; float:left; margin: 0 5px; color:#fff">Search by Product</div>
+            <div style="clear: both"></div>
+        </div>
 
+        <div class="content row no-gutter" style="text-align:right">
+            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12"><input id="Keyword" name="Keyword" type="text" class="SearchFormElementsFont" maxlength="50" value="" placeholder="Name / Item No." style="width: 100%; font-size: 14px" /></div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"><button type="button" class="orange" style="width:100%; margin:0; padding: 8px 5px; font-weight:bold">Search</button></div>
+            <div style="clear: both"></div>
+        </div>
+    </div>
     <!-- Search by Brand ------------------------------------------------------------------------------------------->
 
-    <div class="filter-header" style="margin: 11px 0 0 0">
-        <div class="button-arrow" style="float:left; margin-left: 5px"></div>
-        <div style="font-weight: bold; float:left; margin: 2px 5px;">Search by Brand</div>
-        <div class="uncheck-all" style="float: left; cursor: pointer;margin: 5px 9px" title="Uncheck All"></div>
-        <div style="clear: both"></div>
-        <div class="content" style="margin-left: 0; margin-bottom:10px">
-            <ul style="list-style:none; color: #f08e02"></ul>
+    <div class="filter-header">
+        <div data-bind="click: $root.slideFilterList" style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF; cursor:pointer">
+            <div data-bind="click: $root.slideFilterList" class="button-arrow" style="float:left; margin-left: 5px"></div>
+            <div style="font-weight: bold; float:left; margin: 2px 5px; color: #fff">Search by Brand</div>
+            <div class="uncheck-all hidden-xs hidden-sm hidden-md hidden-lg" style="float: left; cursor: pointer;margin: 5px 18px" title="Uncheck All"></div>
+            <div style="clear: both"></div>
         </div>
-        <div style="margin-top: 11px;"><input type="text" class="filter-text" placeholder="Filter Options" style="padding-left: 5px; width: 100%;margin-left: 0; border: 1px solid gray; height: 21px" /></div>
+
+        <div class="filter-list-parent">
+            <div class="content" style="margin-left: 0">
+                <ul data-bind="foreach: {data : selectedManufacturers, afterAdd: animate}, visible: $root.showSelectedManufacturer" style="margin-bottom: 0;list-style:none; color: #f08e02;margin-left:-35px;">
+                    <li data-bind="click: function(data, event) { $parent.removeSelected('manufacturer', data, event) }" style="display: none; padding-top:7px">
+                        <input type="checkbox" data-bind="checked: clicked, attr: {id:'Brand-' + ManufacturerId, value: ManufacturerId + '-' + Name}" title="Click to Remove" name="ManufacturerID" />
+                        <label data-bind="attr: {for:'Brand-' + ManufacturerId, title: 'Click to remove ' + Name()}" title="Click to Remove"><!--ko text: Name--><!--/ko--></label>
+                    </li>
+                </ul>
+            </div>
+            <div class=""><input data-bind="textInput: filterTextManufacturers" type="text" class="filter-text" placeholder="Type to Filter Options" /></div>
+
+            <div  style="clear:both"></div>
+            <div class="content filter-list rounded-corner-scroll" style="overflow-y:scroll; overflow-x: hidden; height: 210px;">
+                <ul class="list-group" data-bind="foreach:{data :  filteredManufacturers()}, afterHtmlRender : tidyList" style="list-style:none; margin-bottom: 0">
+                    <li data-bind="click: function(data, event) { $parent.addSelected('manufacturer', data, event) }" style="padding-top:7px">
+                        <div class="ellipsis">
+                            <input type="checkbox" data-bind="attr: {id:'Brand-' + ManufacturerId(), value: ManufacturerId() + '-' + Name()}" title="Click to add" name="ManufacturerID" />
+                            <label style="display: inline;" data-bind="attr: {for:'Brand-' + ManufacturerId(), title: 'Click to add ' + Name()}" title="Click to Add"><span style="color:#f08e02; display: inline-block; width:30px">(<!--ko text: Count()--><!--/ko-->)</span> <!--ko text: Name()--><!--/ko--><!--commentout-ko text: (Name().length > 20 ? Name().substring(0, 20) + '...' : Name)--><!--/ko--></label>
+                        </div>
+
+</li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="content filter-list rounded-corner-scroll" style="overflow-y:scroll; overflow-x: hidden; height: 200px; margin-top:-1px;">
-        <ul class="list-group" data-bind="foreach: manufacturers" style="list-style:none">
-            <li data-bind="click: $parent.clickIt">
-                <input type="checkbox" data-bind="checked: clicked, attr: {id:'Brand-' + ManufacturerId(), value: ManufacturerId() + '-' + Name()}" title="Click to add" name="ManufacturerID" />
-                <label data-bind="attr: {for:'Brand-' + ManufacturerId()}" title="Click to Add"><!--ko text: Name--><!--/ko--></label>
-            </li>
-        </ul>
-    </div> 
 
     <!-- Search by Price ------------------------------------------------------------------------------------------->
 
-    <div style="margin: 11px 0 10px 0">
-        <div class="button-arrow" style="float:left;margin-left: 5px"></div><div style="font-weight: bold; float:left; margin: 2px 5px;">Search by Price</div>
-        <!--<div class="check-all" style="float: right; cursor: pointer; margin: 0 5px;"title="Check All"></div>-->
-        <div class="uncheck-all" style="float: left; cursor: pointer; margin: 5px 18px" title="Uncheck All"></div>
-        <div style="clear: both"></div>
-        <div style="margin-top: -15px;"><input type="text" class="filter-text" placeholder="Filter Options" style="display: none; padding-left: 5px; width: 203px;margin-left: 5px; " /></div>
-        <div class="content" style="margin-left: 0">
-            <ul style="list-style:none; color: #f08e02"></ul>
+    <div class="filter-header">
+        <div data-bind="click: $root.slideFilterList" style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF;; cursor:pointer">
+            <div data-bind="click: $root.slideFilterList" class="button-arrow" style="float:left;margin-left: 5px"></div>
+            <div style="font-weight: bold; float:left; margin: 2px 5px;color: #fff">Search by Price</div>
+            <!--<div class="check-all" style="float: right; cursor: pointer; margin: 0 5px;"title="Check All"></div>-->
+            <div class="uncheck-all hidden-xs hidden-sm hidden-md hidden-lg" style="float: left; cursor: pointer; margin: 5px 24px" title="Uncheck All"></div>
+            <div style="clear: both"></div>
         </div>
-    </div>
-    <div class="content filter-list rounded-corner-noscroll">
-        <ul class="list-group" data-bind="foreach: pricingCategories" style="list-style:none">
-            <li data-bind="click: $parent.clickIt">
-                <input type="checkbox" data-bind="checked: clicked, attr: {id : 'Price-' + Id(), value: Price()}" name="Price" title="Click to Add" />
-                <label data-bind="attr: {for: 'Price-' + Id()}" title="Click to add"><!--ko text: Price--><!--/ko--></label>
-            </li>
-        </ul>
+        <div class="filter-list-parent">
+            <div class="content" style="margin-left: 0">
+                <ul data-bind="foreach: {data : selectedPriceRanges, afterAdd: animate}, visible: $root.showSelectedPrice" style="margin-bottom: 0;list-style:none; color: #f08e02;margin-left:-35px;">
+                    <li data-bind="click: function(data, event) { $parent.removeSelected('price', data, event) }" style="display: none; padding-top:7px">
+                        <input type="checkbox" data-bind="checked: clicked, attr: {id:'Price-' + Id, value: Price}" title="Click to Remove" name="Price" />
+                        <label data-bind="attr: {for:'Price-' + Id, title: 'Click to remove ' + Name()}" ><!--ko text: Price--><!--/ko--></label>
+                    </li>
+                </ul>
+            </div>
+            <div class="hidden-xs" style="clear:both"></div>
+            <div class="content filter-list rounded-corner-noscroll" style="">
+                <ul class="list-group" data-bind="foreach: {data : priceRanges, afterAdd: animate }" style="list-style:none;margin-bottom:0">
+                    <li data-bind="click: function(data, event) { $parent.addSelected('price', data, event) }" style="padding-top: 7px">
+                        <div style="max-width:250px;white-space: nowrap;">
+                            <input type="checkbox" data-bind="checked: clicked, attr: {id : 'Price-' + Id(), value: Price()}" name="Price" title="Click to Add" />
+                            <label data-bind="attr: {for: 'Price-' + Id(), title: 'Click to add ' + Price()}" title="Click to add"><span style="color:#f08e02;display: inline-block; width:30px">(1)</span> <!--ko text: Price--><!--/ko--></label>
+                        </div>
+</li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <!-- Search by Category ------------------------------------------------------------------------------------------->
 
-    <div class="filter-header" style="margin: 11px 0 0 0">
-        <div class="button-arrow" style="float:left;margin-left: 5px"></div><div style="font-weight: bold; float:left; margin: 2px 5px;">Search by Category</div>
-        <div class="uncheck-all" style="float: left; cursor: pointer; margin: 5px 0px" title="Uncheck All"></div>
-        <div style="clear: both"></div>
-        <div class="content" style="margin-left: 0">
-            <ul style="list-style:none; color: #f08e02"></ul>
+    <div class="filter-header">
+        <div data-bind="click: $root.slideFilterList" style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF;; cursor:pointer">
+            <div data-bind="click: $root.slideFilterList" class="button-arrow" style="float:left;margin-left: 5px"></div>
+            <div style="font-weight: bold; float:left; margin: 2px 5px;color: #fff">Search by Category</div>
+            <div class="uncheck-all hidden-xs hidden-sm hidden-md hidden-lg" style="float: left; cursor: pointer; margin: 5px 0" title="Uncheck All"></div>
+            <div style="clear: both"></div>
         </div>
-        <div style="margin-top: 11px;"><input type="text" class="filter-text" placeholder="Type to Filter Options" style="padding-left: 5px; width: 100%;margin-left: 0; border: 1px solid gray;height: 21px" /></div>
-    </div>
+        <div class="filter-list-parent">
+            <div class="content" style="margin-left: 0;">
+                <ul data-bind="foreach: {data : selectedCategories, afterAdd: animate}, visible: $root.showSelectedProduct" style="margin-bottom: 0;list-style:none; color: #f08e02;margin-left:-35px;">
+                    <li data-bind="click: function(data, event) { $parent.removeSelected('product', data, event) }" style="display: none; padding-top:7px">
+                        <input type="checkbox" data-bind="checked: clicked, attr: {id : 'Category-' + ProductCategoryId(), value: ProductCategoryId() + '-' + Name()}" title="Click to Remove" name="ProductCategoryID" />
+                        <label data-bind="attr: {for: 'Category-' + ProductCategoryId(),title: 'Click to remove ' + Name()}" title="Click to Remove"><!--ko text: Name--><!--/ko--></label>
+                    </li>
+                </ul>
+            </div>
+            <div class=""><input data-bind="textInput: filterTextCategories" type="text" class="filter-text" placeholder="Type to Filter Options" /></div>
 
-    <div class="content filter-list rounded-corner-scroll" style="overflow-y:scroll; overflow-x: hidden; height: 200px; margin-top:-1px;">
-        <ul class="list-group" data-bind="foreach: productCategories" style="list-style:none">
-            <li data-bind="click: $parent.clickIt">
-                <input type="checkbox" data-bind="checked: clicked, attr: {id : 'Category-' + ProductCategoryId(), value: ProductCategoryId() + '-' + Name()}" name="ProductCategoryID" title="Click to Add" />
-                <label data-bind="attr: {for: 'Category-' + ProductCategoryId()}" title="Click to add"><!--ko text: Name--><!--/ko--></label>
-            </li>
-        </ul>
+            <div style="clear:both"></div>
+            <div class="content filter-list rounded-corner-scroll" style="overflow-y:scroll; overflow-x: hidden; height: 210px;">
+                <ul class="list-group" data-bind="foreach: {data : filteredCategories()},afterHtmlRender : tidyList" style="list-style:none;">
+                    <li data-bind="click: function(data, event) { $parent.addSelected('product', data, event) }" style="padding-top: 7px">
+                        @*<div style="width:100%">*@
+                        <div class="ellipsis">
+                            <input type="checkbox" data-bind="checked: clicked, attr: {id : 'Category-' + ProductCategoryId(), value: ProductCategoryId() + '-' + Name()}" name="ProductCategoryID" title="Click to Add" />
+                            <label style="display: inline;" data-bind="attr: {for: 'Category-' + ProductCategoryId(), title: 'Click to add ' + Name()}">
+                                <span style="color:#f08e02;display: inline-block; width:30px">(<!--ko text: Count()--><!--/ko-->)</span> <span><!--ko text: Name() --><!--/ko--> </span>
+                            </label>
+                        </div>
+                        @*</div>*@
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 
-<script>    
-   
+<script>
+
     $(function () {
 
-        require(['productSearch'], function (search) {
-            search.getProductInfo()
-        });     
+        require(['productSearch'], function (productSearch) {
+            productSearch.initialize();
+        });
     });
 
 </script>
