--- a/GSKC.Web/Content/bootstrap.css
+++ b/GSKC.Web/Content/bootstrap.css
@@ -2297,12 +2297,6 @@ legend {
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 }
-label {
-  display: inline-block;
-  max-width: 100%;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
 input[type="search"] {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -2712,12 +2706,15 @@ select[multiple].input-lg {
 .btn {
   display: inline-block;
   margin-bottom: 0;
+  margin-top: 0;
+  margin-left: 0;
   font-weight: normal;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
   background-image: none;
   border: 1px solid transparent;
+  border-radius: 0 4px 4px 0 ;
   white-space: nowrap;
   padding: 6px 12px;
   font-size: 14px;
