--- a/GSKC.Web/Content/less/buttons.less
+++ b/GSKC.Web/Content/less/buttons.less
@@ -9,12 +9,15 @@
 .btn {
   display: inline-block;
   margin-bottom: 0; // For input.btn
+  margin-top: 0;
+  margin-left:0;
   font-weight: @btn-font-weight;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
+  border-radius:  0 4px 4px 0 ;
   white-space: nowrap;
   .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @border-radius-base);
   .user-select(none);
