--- a/GSKC.Web/Views/Home/Index.cshtml
+++ b/GSKC.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿<div style="width:100%">
-    <div style="position: relative; overflow: hidden">
+﻿<div style="width:100%; margin-left: 0; margin-right:0" class="row">
+    <div style="position: relative; overflow: hidden" class="hidden-xs">
         <div id="ImageContainer" style="width:100%; height: 260px; overflow:hidden; padding: 0">
-            <div class="image"><img src="/Images/slide-show-image-10.jpg" style="width: 100%"/></div>            
+            <div class="image"><img src="/Images/slide-show-image-10.jpg" style="width: 100%" /></div>
             <div class="image"><img src="/Images/slide-show-image-8.jpg" style="width: 100%" /></div>
             <div class="image"><img src="/Images/slide-show-image-7.jpg" style="width: 100%" /></div>
             <div class="image"><img src="/Images/slide-show-image-6.jpg" style="width: 100%" /></div>
@@ -11,8 +11,6 @@
             <div class="image"><img src="/Images/slide-show-image-2.jpg" style="width: 100%" /></div>
             <div style="clear:both"></div>
         </div>
-
-        @*<div style="background-color: #000; opacity: .5;filter: alpha(opacity=50);width: 100%;height: 74px;position: absolute; bottom: 0"></div>*@
         <div style="width: 100%;  text-align:center" class="hidden-xs">
             <div class="category-image-1 thumb" style="margin-left: 0;" data-product="109-Knives - Fixed Blades"><div>Fixed Blades</div></div>
             <div class="category-image-2 thumb" data-product="28-Knives - Folders"><div>Folders</div></div>
@@ -22,99 +20,151 @@
             <div style="clear:both"></div>
         </div>
     </div>
-    <div style="width: 100%; padding: 10px;">
-        <div style="padding-bottom:7px; padding: 0 10px 0 10px;">
-        <h1 class="SpecialsFont">Welcome to Gatlin and Sons Knife Company&trade;</h1>
-    </div>
-    <div style="text-align:justify;padding: 15px;">
-        <p>
-            We carry a broad selection of knives including tactical, utility, hunting, fishing and collectible
-            pocket knives from top-of-the-line brands such as Spyderco, Kabar, SOG, Case, Buck, Gerber, Boker, Kershaw, Smith & Wesson and many many more.
-        </p>
-
-        <p>
-            And we don't do just knives!  Are you a hunter, fisherman and/or outdoorsman? If so, then we've got you covered too!
-            We also carry a huge selection of gear/equipment for the outdoor enthusiast.
-        </p>
-
-        <div style="text-align:left"><img alt="Have a Knife Day!" src="/Images/HaveAKnifeDay_black.png" style="width: 70px; margin-right: 10px; margin-bottom: 10px;" align="right" />Our GSKC team thanks you for stopping in and as always...</div>
-
-    </div>
-    <!-- Begin MAIL CHIMP CODE-->
-    <div id="mc_embed_signup" style="border-bottom: 1px dotted #000;border-top: 1px dotted #000; background-color: #F1F1E4; margin-top: 50px; padding: 10px 10px">
-        <p>
-            <strong>Subscribe to our mailing list.</strong> <br />
-            Sign up for our mailing list to receive our latest product information and newsletter.
-        </p>
-
-        <form action="http://gatlinandsonsknifecompany.us1.list-manage.com/subscribe/post?u=7dddfd0796521ed179b7c28ac&amp;id=81dcc54a69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-            <div>
-                <div id="mce-responses">
-                    <div class="SuccessFont" id="mce-error-response" style="display:none"></div>
-                    <div class="SuccessFont" id="mce-success-response" style="display:none"></div>
-                </div>
-                <input name="EMAIL" id="mce-EMAIL" type="text" value="Enter your email address here" size="30" class="FormElementsFont" onclick="this.value = '';">
-                &nbsp;
-                <button class="orange" type="submit" name="submit">Subscribe</button>
-            </div>
-        </form>
-    </div>
-    <!-- End MAIL CHIMP CODE-->
-
     <div>
-        <!-- PayPal Logo -->
-        <table border="0" style="padding-top:5px" cellspacing="0" align="center">
-            <tr>
-                <td align="center"></td>
-            </tr>
-            <tr>
-                <td align="center"><a href="#" onclick="javascript:window.open('https://www.paypal.com/us/cgi-bin/webscr?cmd=xpt/Marketing/popup/OLCWhatIsPayPal-outside','olcwhatispaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=400, height=350');"><img src="https://www.paypal.com/en_US/i/bnr/horizontal_solution_PPeCheck.gif" border="0" alt="Solution Graphics"></a></td>
-            </tr>
-        </table>
+        <div style="float:left; padding: 10px; border-right: 1px dotted #000;" class="col-lg-6 col-md-8 col-sm-8 hidden-xs">
+            
+                <div style="padding-bottom:7px; padding: 0 10px 0 10px;">
+                    <h1 class="SpecialsFont">Welcome to Gatlin and Sons Knife Company&trade;</h1>
+                </div>
+
+                <div style="text-align:justify;padding: 15px;">
+                    <p>
+                        We carry a broad selection of knives including tactical, utility, hunting, fishing and collectible
+                        pocket knives from top-of-the-line brands such as Spyderco, Kabar, SOG, Case, Buck, Gerber, Boker, Kershaw, Smith & Wesson and many many more.
+                    </p>
+
+                    <p>
+                        And we don't do just knives!  Are you a hunter, fisherman and/or outdoorsman? If so, then we've got you covered too!
+                        We also carry a huge selection of gear/equipment for the outdoor enthusiast.
+                    </p>
+
+                    <div style="text-align:left"><img alt="Have a Knife Day!" src="/Images/HaveAKnifeDay_black.png" style="width: 70px; margin-right: 10px; margin-bottom: 10px;" align="right" />Our GSKC team thanks you for stopping in and as always...</div>
+
+                </div>
+
+                <!-- Begin MAIL CHIMP CODE-->
+                <div id="mc_embed_signup" style="border-bottom: 1px dotted #000;border-top: 1px dotted #000; background-color: #F1F1E4; margin-top: 50px; padding: 10px 10px">
+                    <p>
+                        <strong>Subscribe to our mailing list.</strong> <br />
+                        Sign up for our mailing list to receive our latest product information and newsletter.
+                    </p>
+
+                    <form action="http://gatlinandsonsknifecompany.us1.list-manage.com/subscribe/post?u=7dddfd0796521ed179b7c28ac&amp;id=81dcc54a69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                        <div>
+                            <div id="mce-responses">
+                                <div class="SuccessFont" id="mce-error-response" style="display:none"></div>
+                                <div class="SuccessFont" id="mce-success-response" style="display:none"></div>
+                            </div>
+                            <input name="EMAIL" id="mce-EMAIL" type="text" value="Enter your email address here" size="30" class="FormElementsFont" onclick="this.value = '';">
+                            &nbsp;
+                            <button class="orange" type="submit" name="submit">Subscribe</button>
+                        </div>
+                    </form>
+                </div>
+                <!-- End MAIL CHIMP CODE-->
+
+                <div>
+                    <!-- PayPal Logo -->
+                    <table border="0" style="padding-top:5px" cellspacing="0" align="center">
+                        <tr>
+                            <td align="center"></td>
+                        </tr>
+                        <tr>
+                            <td align="center"><a href="#" onclick="javascript:window.open('https://www.paypal.com/us/cgi-bin/webscr?cmd=xpt/Marketing/popup/OLCWhatIsPayPal-outside','olcwhatispaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=400, height=350');"><img src="https://www.paypal.com/en_US/i/bnr/horizontal_solution_PPeCheck.gif" border="0" alt="Solution Graphics"></a></td>
+                        </tr>
+                    </table>
+
+                </div>
+       </div>
+                
+        <div style="padding: 0; float: left; border-right: 0 dotted #000;" id="FeaturedProducts" class="col-lg-6 col-md-4 col-sm-4 col-xs-12">
+            <div style="border-bottom: 1px dotted #000; padding:10px; background-color:#c4c2c2;" class="hidden-xs">
+                <h2 class="SubHeaderFont" style="color:#fff; margin:0">Featured Products</h2>
+            </div>
+            <div style="border-bottom: 1px dotted #000; padding:10px 52px; background-color:#c4c2c2;" class="visible-xs">
+                <h2 class="SubHeaderFont" style="color:#fff; margin:0">Products</h2>
+            </div>
+            <div>
+                <div data-bind="foreach: products" style="padding:10px; visibility: visible" class="row">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" style="margin-bottom:10px; border-bottom: dotted 0 #000000; padding-bottom: 10px; position: relative; height: 200px; background-color white;">
+                        <div style="position:absolute; z-index: 1000; top:0; left:0"><img alt="Deal" src="/Images/Deal.png" /></div>
+                        <div style="position:absolute; z-index: 1001; top: 56px;right: 5px;"><span>msrp: </span></div>
+                        <div style="position:absolute; z-index: 1001; top: 70px;right: 5px;"><span style="color: #f08e02;font-size: 1.1em; text-decoration: line-through"><!--ko text: MsrpCost--><!--/ko--></span></div>
+                        <div style="position:absolute; z-index: 1001; top: 95px;right: 3px;color: #FFF;font-size: 1.4em;"><!--ko text: RetailCost--><!--/ko--></div>
+                        <div style="position:absolute; z-index: 1000; top:91px; right:0"><img alt="Deal" src="/Images/SalePriceBG.png" /></div>
+                        <div style="position:absolute; z-index: 999; top:0; left:0; padding-top: 5px;border: 1px solid #fff; width: 100%">
+                            <div data-bind="visible: (LoggedIn() && (GroupId() > 0))" style="position: absolute; z-index: 1000; right: -18px; bottom: 95px;">
+                                <button id="EditProduct" data-bind="click: $parent.showAdmin" class="orange">
+                                    <div class="button-edit" style="display: inline-block"></div><span style="margin-left: 3px;">Edit</span>
+                                </button>
+                            </div>
+
+                            <div data-bind="attr:{onclick : 'location.href=\'/Index.asp?PageID=4&ProductID=' + ProductId()}" style="cursor:pointer; margin: 0 25px;">
+                                <!-- ko if: (SupplierName() == 'GSKC') -->
+                                <img data-bind="attr: {src : '/Images/Knives/Full/' + SKU() + '.jpg',alt : 'Check out the ' + ManufacturerName() + ' ' + ProductName() + ' from our ' + CategoryName() + ' collection.',                        title : 'Check out the ' + ManufacturerName() + ' ' + ProductName() + ' from our ' + CategoryName() + ' collection.'}" style="width: 120px">
+                                <!-- /ko -->
+                                <!-- ko ifnot: (SupplierName() == 'GSKC') -->
+                                <img data-bind="attr: {src : 'http://productimages.moteng.com/' + SKU() + '.jpg',alt : 'Check out the ' + ManufacturerName() + ' ' + ProductName() + ' from our ' + CategoryName() + ' collection.',title : 'Check out the ' + ManufacturerName() + ' ' + ProductName() + ' from our ' + CategoryName() + ' collection.'}" style="width: 120px" />
+                                <!-- /ko -->
+                            </div>
+                        </div>
+                        <div style="position: absolute; left:0;top:125px; border: 1px solid #fff; width:100%; padding-top:10px">
+                            <div class="FeaturedKnifeHeaderFont" style="height: 37px"><!--ko text: ProductName--><!--/ko--></div>
+                            @*<div class="FeaturedKnifeTextFont" style="margin-top:5px;"><!--ko text: Features--><!--/ko--></div>*@
+                            <div align="right" class="FeaturedKnifeTextFont" style="margin-top:5px; text-align: right; background-color: #ececec; padding: 2px 5px 3px 5px">
+                                <span data-bind="attr:{onclick : 'location.href=\'/Index.asp?PageID=4&ProductID=' + ProductId() + '\''}" style="cursor: pointer; padding-top:10px;" class="MoreInformationFont">View Details <span style="font-size: 14px">&raquo</span></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-</div>
 
-<div style="clear:both"></div>	
+<div style="clear:both"></div>
 
 @section Scripts {
-<script>
-    var home = {
-        bindEvents: function () {
-            $(".thumb").click(function () {
-                var productCategoryId = $.trim($(this).attr("data-product").split("-")[0]);
-                //alert(productCategoryId);
-                $("#Category-" + productCategoryId, "#SearchForm").prop("checked", true).change();
-                $("#SearchForm").submit();
-            });
+    <script>
+        var home = {
+            bindEvents: function () {
+                $(".thumb").click(function () {
+                    var productCategoryId = $.trim($(this).attr("data-product").split("-")[0]);
+                    //alert(productCategoryId);
+                    $("#Category-" + productCategoryId, "#SearchForm").prop("checked", true).change();
+                    $("#SearchForm").submit();
+                });
 
-        },
-        slide: function (element) {
-            element.animate({ left: '0px', opacity: 1 }, null,
-            function () {
-                element.prev("div.image").css({ left: '-250px', opacity: 0 });
-            });
+            },
+            slide: function (element) {
+                element.animate({ left: '0', opacity: 1 }, null,
+                function () {
+                    element.prev("div.image").css({ left: '-250px', opacity: 0 });
+                });
 
-            var nextImage = element.next("div.image");
+                var nextImage = element.next("div.image");
 
-            if (nextImage.length > 0) {
-                setTimeout(function () { home.slide(nextImage); }, 7000);
-            } else {
-                setTimeout(function () {
+                if (nextImage.length > 0) {
+                    setTimeout(function () { home.slide(nextImage); }, 7000);
+                } else {
+                    setTimeout(function () {
 
-                    home.slide($("div.image:first"));
-                    $("div.image:last").css({ left: '-250px', opacity: 0 });
-                },
-             7000);
+                        home.slide($("div.image:first"));
+                        $("div.image:last").css({ left: '-250px', opacity: 0 });
+                    },
+                 7000);
 
+                }
             }
+
         }
 
-    }
-
-    $(function () {
-        home.bindEvents();
-        home.slide($("div.image:first"));
-    });
-</script>
+        $(function () {
+            home.bindEvents();
+            home.slide($("div.image:first"));
+            require(['featuredProducts'], function (products) {
+                products.getFeaturedProducts();
+            });
+        });
+    </script>
 }
