--- a/GSKC.Web/Views/Shared/_Layout.cshtml
+++ b/GSKC.Web/Views/Shared/_Layout.cshtml
@@ -16,41 +16,43 @@
 <body>
     <div>
         <div style="background-color: #000;">
-            <div style="margin: 0 auto; width:458px; height: 107px; background: url(/Images/GSKC_Trailer_Side_mist_website2_bg.png); background-repeat: no-repeat;" />
+            <div style="margin: 0 auto; width: 468px; height: 107px; background: url(/Images/GSKC_Trailer_Side_mist_website2_bg.png); background-repeat: no-repeat;" />
         </div>
     </div>
 
-    <div style="position: absolute; z-index: 1000; top: -9px; left:50%; margin-left: -148px; width:275px;">
-        <img src="/Images/GSKC_Trailer_Side_mist_website_logo.png" style="width: 275px; max-width: 275px;" />
+    <div class="gskc-logo">
+        <img src="/Images/GSKC_Trailer_Side_mist_website_logo.png" />
     </div>
 
     <div class="navbar navbar-inverse" role="navigation">
-        <div class="container" style="width: 100%; padding-left:0; padding-right: 0">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav nav-justified">
-                <li class="active"><a href="#">HOME</a></li>
-                <li><a href="#about">SHOP</a></li>
-                <li><a href="#contact">SUPPORT</a></li>
-                <li><a href="#contact">.</a></li>
-                <li><a href="#contact">.</a></li>
-                <li><a href="#contact">CONTACT US</a></li>
-                <li><a href="#contact">LOGIN</a></li>
-                <li style="white-space: nowrap"><a href="#contact">VIEW CART</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
+        <div class="container" style="padding-left:0; padding-right: 0">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav nav-justified">
+                    <li class="active"><a href="/Home/Index">HOME</a></li>
+                    <li><a href="#about">SHOP</a></li>
+                    <li><a href="/Support/Home/Index">SUPPORT</a></li>
+                    <li class="nav-menu-spacer"><a href="#contact">.</a></li>
+                    <li><a href="/Contact/Home/Index">CONTACT US</a></li>
+                    <li><a href="#contact">SIGN-IN</a></li>
+                    <li style="white-space: nowrap"><a href="#contact">VIEW CART</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
         </div>
     </div>
 
     <div class="row row-offcanvas row-offcanvas-left">
         <div id="SlidePanel" class="col-lg-3 col-md-3 col-sm-3 sidebar-offcanvas" style="min-height:100%; padding-right: 0; background: #F1F1E4;">
+            <div style="border-bottom: 1px dotted gray;border-right: 1px dotted gray; padding:10px;background-color:gray">
+                <span class="SubHeaderFont" style="color:#fff">Product Search</span>
+            </div>
             @Html.Action("Index", "Home", new { Area = "ProductSearch" })
         </div>
         <div class="col-lg-6 col-md-6 col-sm-9 col-xs-12" style="padding-left: 0; padding-right: 0">
@@ -65,29 +67,20 @@
 
                 <div style="padding: 10px; background-color:#F1F1E4; text-align: center"><span style="font-weight: bold;">Look for us at the following events:</span></div>
                 <div style="padding-left: 20px;padding-right: 20px; background-color:#F1F1E4">
-                    <img alt="Loading" src="/Images/InterfaceElements/ajax-loader.gif" id="loading" style="padding-left: 50px; display:none;">
+                    <img alt="Loading" src="/Images/ajax-loader.gif" id="loading" style="padding-left: 50px; display:none;">
                     <iframe id="testIframe" src="http://www.gatlinandsonsknifecompany.com/Calendar/Index.aspx" marginheight="0" marginwidth="0" width="100%" height="325" frameborder="0" scrolling="no"></iframe>
                 </div>
-                <div style="border-bottom: 1px dotted #000;padding:10px 10px 10px 20px; background-color: #ececec;background-color:#c4c2c2">
+                <div style="border-bottom: 1px dotted #000;padding:10px 10px 10px 20px; background-color: #ececec;background-color:#c4c2c2" class="hidden-xs">
                     <span class="SubHeaderFont" style="color:#fff">Social Updates</span>
                 </div>
-                <div class="fb-like-box fb_iframe_widget" style="padding-left: 20px" data-href="https://www.facebook.com/GatlinAndSons" data-width="268" data-show-faces="false" data-header="true" data-stream="true" data-show-border="false" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=448378241936683&amp;header=true&amp;href=https%3A%2F%2Fwww.facebook.com%2FGatlinAndSons&amp;locale=en_US&amp;sdk=joey&amp;show_border=false&amp;show_faces=false&amp;stream=true&amp;width=268"><span style="vertical-align: bottom; width: 100%; height: 425px;"><iframe name="f6f809218" width="100%" height="1000px" frameborder="0" allowtransparency="true" scrolling="no" title="fb:like_box Facebook Social Plugin" src="http://www.facebook.com/plugins/like_box.php?app_id=448378241936683&amp;channel=http%3A%2F%2Fstatic.ak.facebook.com%2Fconnect%2Fxd_arbiter%2FW2xi4Tmu0YA.js%3Fversion%3D41%23cb%3Df243c93044%26domain%3Dwww.gatlinandsonsknifecompany.com%26origin%3Dhttp%253A%252F%252Fwww.gatlinandsonsknifecompany.com%252Ff2cab7e04%26relation%3Dparent.parent&amp;header=true&amp;href=https%3A%2F%2Fwww.facebook.com%2FGatlinAndSons&amp;locale=en_US&amp;sdk=joey&amp;show_border=false&amp;show_faces=false&amp;stream=true&amp;width=268" style="border: none; visibility: visible; width: 100%; height: 425px;" class=""></iframe></span></div>
+                <div class="fb-like-box fb_iframe_widget hidden-xs" style="padding-left: 20px" data-href="https://www.facebook.com/GatlinAndSons" data-width="268" data-show-faces="false" data-header="true" data-stream="true" data-show-border="false" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=448378241936683&amp;header=true&amp;href=https%3A%2F%2Fwww.facebook.com%2FGatlinAndSons&amp;locale=en_US&amp;sdk=joey&amp;show_border=false&amp;show_faces=false&amp;stream=true&amp;width=268"><span style="vertical-align: bottom; width: 100%; height: 425px;"><iframe name="f6f809218" width="100%" height="1000px" frameborder="0" allowtransparency="true" scrolling="no" title="fb:like_box Facebook Social Plugin" src="http://www.facebook.com/plugins/like_box.php?app_id=448378241936683&amp;channel=http%3A%2F%2Fstatic.ak.facebook.com%2Fconnect%2Fxd_arbiter%2FW2xi4Tmu0YA.js%3Fversion%3D41%23cb%3Df243c93044%26domain%3Dwww.gatlinandsonsknifecompany.com%26origin%3Dhttp%253A%252F%252Fwww.gatlinandsonsknifecompany.com%252Ff2cab7e04%26relation%3Dparent.parent&amp;header=true&amp;href=https%3A%2F%2Fwww.facebook.com%2FGatlinAndSons&amp;locale=en_US&amp;sdk=joey&amp;show_border=false&amp;show_faces=false&amp;stream=true&amp;width=268" style="border: none; visibility: visible; width: 100%; height: 425px;" class=""></iframe></span></div>
             </div>
 
         </div>
     </div>
 
 
-    @*<div class="footer">
-            <div class="container">
-                <p class="text-muted">Place sticky footer content here.</p>
-            </div>
-        </div>*@
-    @*<div class="footer">
-        <div class="container">
-            <p class="text-muted"></p>
-        </div>
-    </div>*@
+
 
     @Scripts.Render("~/bundles/bootstrap")
 
@@ -106,7 +99,7 @@
         });
 
     </script>
-    
+
 </body>
 
 </html>
